--- a/mysite/single_page/templates/single_page/check_and_filter.html
+++ b/mysite/single_page/templates/single_page/check_and_filter.html
@@ -8,33 +8,55 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale="1">
         <title>집! 콕!</title>
+        
+        <style>
+            body{
+                background-color: #519ecb;
+                color:white;
+            }
+            .form-check input[type="checkbox"],
+            .form-check input[type="radio"] {
+                width: 30px; /* 체크박스 및 라디오 버튼 가로 크기 조정 */
+                height: 30px; /* 체크박스 및 라디오 버튼 세로 크기 조정 */
+                margin-right: 5px; /* 체크박스와 텍스트 사이 간격 조정 */
+        }
+        .form-check label {
+        cursor: pointer;
+        font-size: 30px;
+    }
+    input[type="submit"]:hover,
+        input[type="radio"]:hover {
+            background-color: rgb(153, 150, 162); /* 호버 시 배경색 변경 */
+            transform: scale(1.05); /* 호버 시 약간 확대됨 */
+        }
+        input#content {
+            width: 300px; /* 원하는 너비로 조정합니다 */
+            height: 40px; /* 원하는 높이로 조정합니다 */
+            font-size: 16px; /* 원하는 폰트 크기로 조정합니다 */
+        }
+        input#title {
+            width: 300px; /* 원하는 너비로 조정합니다 */
+            height: 40px; /* 원하는 높이로 조정합니다 */
+            font-size: 16px;
+        }
+        
+        .form-check-input2{
+            width: 30px;
+            height: 30px;
+            margin-right:8px;
+
+        }
+
+        .form-check-label2{
+            font-size:25px;
+            color:#ffffff;
+
+        }
+
+     
+        </style>
     </head>
     <body>
-        <style type="text/css">
-            blockquote {
-                background: #f9f9f9;
-                border-Left: 10px solid #cccccc;
-                margin: 1.5em 10px;
-                padding: 0.5em 10px;
-                quotes: "\201C""\201D""\2018""\2019";
-            }
-            blockquote:before {
-                color: #cccccc;
-                content: open-quote;
-                font-size: 3em;
-                line-height: 0.1em;
-                margin-Left: 11.5em;
-                vertical-align: -0.4em;
-            }
-            blockquote:after {
-                color: #cccccc;
-                content: close-quote;
-                font-size: 3em;
-                line-height: 0.1em;
-                margin-left: 0.25em;
-                vertical-align: -0.4em;
-            }
-        </style>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -57,25 +79,23 @@
                 </div>
             </div>
         </nav>
-        <div class="panel-footer">
-            <blockquote>&nbsp;남은 우편번호 수 : 498 </blockquote>
-        </div>
 
         <form action="{% url 'check_and_filter' %}" method = "post">
             {% csrf_token %}
             <div class="container">
                 <div class="row">
+                    <hr>
                     <div class="col-md-6 col-md-offset-3">
                         <div class="list-group text-center">
                             <br>
-                            <a class="list-group-item list-group-item-success">주거 희망하는 구 선택</a>
+                            <h3><b><a class="list-group-item list-group-item-success">주거 희망하는 구 선택</a></b></h3>
                             <div class="form-inline">
                                 <br>
                                 <div class="form-check">
                                     <input type="checkbox" value="마포구" id="Mapo" name="DataEngCsv">
-                                    <label class="form-check-label" for="Mapo">마포구</label>
+                                    <label class="form-check-label" for="Mapo">마포구&nbsp;&nbsp;</label>
                                     <input type="checkbox" value="서대문구" id="Seodaemoon" name="DataEngCsv">
-                                    <label class="form-check-label" for="Seodaemoon">서대문구</label>
+                                    <label class="form-check-label" for="Seodaemoon">서대문구&nbsp;&nbsp;</label>
                                     <input type="checkbox" value="종로구" id="Jonglo" name="DataEngCsv">
                                     <label class="form-check-label" for="Jonglo">종로구</label>
                                 </div>
@@ -93,20 +113,20 @@
                         {% csrf_token %}
                         
                         <br>
-                        <a class="list-group-item list-group-item-success">예산 설정</a>
+                        <h3><b><a class="list-group-item list-group-item-success">예산 설정</a></b></h3>
                         <br>
                             <div class="form-inline">
                                 <div class="form check">
-                                    <input class="form-check-input" type="radio" name="selected_items" id="month_check">
-                                    <label class="form-check-label" for="month_check"> 월세</label>
-                                    <input class="form-check-input" type="radio" name="selected_items" id="year_check">
-                                    <label class="form-check-label" for="year_check"> 전세</label>
+                                    <input class="form-check-input2" type="radio" name="selected_items" id="month_check">
+                                    <label class="form-check-label2" for="month_check"><span style="color: white;">월세&nbsp;&nbsp;</span></label>
+                                    <input class="form-check-input2" type="radio" name="selected_items" id="year_check">
+                                    <label class="form-check-label2" for="year_check"><span style="color: white;">전세</span></label>
                                 </div>
-
+                        <br>
                         <div class="form-group input-group">
                             <span class="input-group-addon">[전/월세 보증금]</span>
                                 <input type="text" id="title" name="title" class="form-control" placeholder="최대 보증금 입력">
-                            <span class="input-group-addon">만원</span>
+                            <span class="input-group-addon">만 원</span>
                         </div>
                         <br>
                         <br>
@@ -117,7 +137,7 @@
                             {% else %}
                                 <input type="text" id="content" name="content" class="form-control" placeholder="최대 월세 입력" disabled>
                             {% endif %}
-                            <span class="input-group-addon">만원</span>
+                            <span class="input-group-addon">만 원</span>
                         </div>
                         <br>
                         <br>
@@ -129,14 +149,6 @@
             </div>
         </form>
         <hr>
-        <footer class="footer-fixed" style="background-color: rgb(64, 154, 206); color: #ffffff">
-            <div class="container">
-                <br>
-                <div class="row">
-                    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2023</h5><h5>Orara..?</h5></div>
-                </div>
-            </div>
-        </footer>
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="bootstrap.js"></script>
         <script>
