--- a/mysite/static/homes.css
+++ b/mysite/static/homes.css
@@ -23,12 +23,12 @@ a:hover {
 }
 
 .navbar-default { /* 배경 색상 */
-    background-color: rgb(64, 154, 206);
+    background-color: rgb(251, 254, 255);
     border-color: #000000;
 }
 
 .navbar-default .navbar-brand { /* 내비게이샨 제목 색상 */
-    color: #ffffff;
+    color: #519ecb;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus { /* 내비게이션 제목에 마우스를 올렸을 때 */
@@ -53,5 +53,5 @@ a:hover {
 
 .map-container {
     width: 100%;
-    height: 300px; /* 높이는 필요에 따라 조정 */
+    height: 500px; /* 높이는 필요에 따라 조정 */
 }
