--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -186,21 +186,6 @@ select {
     border-radius: 10px;
 }
 
-button[type="submit"],
-button {
-    background-color: white;
-    font-family: sans-serif;
-    font-size: 18px;
-    font-weight: bolder;
-    text-shadow: 0px 3px 3px #c5c5c5;
-    padding: 10px 20px;
-    cursor: pointer;
-    border: 6px outset;
-    border-radius: 15px;
-    outline: none;
-    box-shadow: 3px 3px 3px grey;
-    margin: 10px;
-}
 
 button:hover {
     background-color: lightgrey;
@@ -208,6 +193,7 @@ button:hover {
 }
 
 ul {
+    list-style: none;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -254,22 +240,12 @@ label {
     margin-top: 10px;
 }
 
-input[type="text"],
-input[type="number"],
-select {
-    width: 400px; /* 인풋박스 너비 설정 */
-    padding: 10px;
-    font-size: 18px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-}
 
 button[type="submit"],
 button {
-    background-color: white;
+    background-color: rgb(54, 21, 107);
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bolder;
     text-shadow: 0px 3px 3px #c5c5c5;
     padding: 10px 20px;
@@ -285,3 +261,4 @@ button:hover {
     background-color: lightgrey;
     transform: scale(1.1);
 }
+
