non-stop server

--- a/zipkok/mysite/single_page/templates/single_page/result.html
+++ b/zipkok/mysite/single_page/templates/single_page/result.html
@@ -198,7 +198,7 @@
                         <h5>Copyright &copy; 2023</h5>
                         <h5>Orara..?</h5>
                         
-                        <form method="get" action="http://funfungun.shop:8005">
+                        <form method="get" action="http://funfungun.shop">
                             <button type="submit" style="background-color: #ffffff; color: rgb(64, 154, 206); border: none; padding: 8px 16px; cursor: pointer; border-radius: 4px; margin-top: 10px;">홈으로</button>
                         </form>
                     </div>
